--- a/css/master.css
+++ b/css/master.css
@@ -51,7 +51,7 @@ header {
 .waterSourceSmall {
   font-family: 'Tangerine', cursive;
   font-weight: 600;
-  font-size: 1.5em;
+  font-size: 2em;
   opacity: 0.6;
 }
 
@@ -60,6 +60,14 @@ header {
   font-style: italic;
   font-weight: 200;
   opacity: 0.5;
+}
+
+.theSpanSmall {
+  font-family: 'Tangerine', cursive;
+  font-style: italic;
+  font-weight: 600;
+  opacity: 0.3;
+  font-size: 2em;
 }
 
 .header_imgBlock {
@@ -164,11 +172,22 @@ main {
   border-bottom: 1px solid var(--color-acc2tt);
 }
 
-.signup_block {
+.signup_container {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   padding-top: 60px;
-  padding-bottom: 100px;
+  padding-bottom: 60px;
+}
+
+.signup_block {
+  /* display: flex;
+  justify-content: center; */
+}
+
+.signup_inputContainer{
+  display: flex;
+  flex-direction: column;
 }
 
 .signup_block > label {
@@ -188,18 +207,24 @@ main {
   background-color: var(--color-acc1);
   border-radius: 3px;
   border: none;
-  padding: 5px 5vw 5px 10px;
+  /* padding: 5px 5vw 5px 10px; */
+  padding: 10px 0;
   line-height: 1.7em;
   font-family: 'Open Sans Condensed', sans-serif;
   text-transform: uppercase;
-  font-size: 0.7em;
+  text-align: center;
+  font-size: 1em;
+  font-weight: 500;
+  color: var(--color-acc2);
   cursor: pointer;
+  width: 200px;
 }
 
 .signup_button:hover {
   transition: all 0.6s linear;
   background-color: var(--color-acc2);
   border: 1px solid var(--color-main);
+  color: var(--color-main);
   transform: scale(0.95);
 }
 
@@ -209,12 +234,16 @@ main {
 
 .product_highlight {
   display: grid;
-  grid-template-columns: 25vw 4vw 13vw 6vw 6vw 1fr 6vw;
+  /* grid-template-columns: 25vw 4vw 13vw 6vw 6vw 1fr 6vw; */
+  /* grid-template-columns: 1fr 4vw 4vw 4vw 13vw 4vw 4vw 1fr;  */
+  /* grid-template-columns: 1fr repeat(8, 4vw) 1fr; */
+
+  grid-template-columns: 4vw 20vw 1fr repeat(8, 4vw) 1fr;
   grid-template-rows: repeat(3, 1fr);
   grid-template-areas:
-  ". icon1 content1 image1 image1"
-  ". icon2 content2 image2 ."
-  ". icon3 content3 image3 image3";
+  "icon1 content1"
+  "icon2 content2"
+  "icon3 content3";
   grid-gap: 10px;
   border-bottom: 1px solid var(--color-acc2tt);
   padding-bottom: 20px;
@@ -250,6 +279,7 @@ main {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  padding-left: 20px;
 }
 
 .product_highlightContent > ul {
@@ -284,16 +314,29 @@ main {
 }
 
 .highlightImage1 {
-  /* grid-area: image1; */
-  grid-area: 1 / 6 / 1 / 8;
+  grid-area: 1 / 3 / 1 / 9;
 }
 .highlightImage2 {
-  /* grid-area: image2; */
-  grid-area: 2 / 5 / 2 / 8;
+  grid-area: 2 / 3 / 2 / 8;
 }
 .highlightImage3 {
+  grid-area: 3 / 3 / 3 / 7;
+}
+
+.highlightImage1r {
+  /* grid-area: image1; */
+  grid-area: 1 / 9 / 1 / 13;
+  /* grid-area: 1 /  / 1 / ; */
+}
+.highlightImage2r {
+  /* grid-area: image2; */
+  /* grid-area: 2 / 5 / 2 / 8; */
+  grid-area: 2 / 8 / 2 / 13;
+}
+.highlightImage3r {
   /* grid-area: image3; */
-  grid-area: 3 / 4 / 3 / 8;
+  /* grid-area: 3 / 4 / 3 / 8; */
+  grid-area: 3 / 7 / 3 / 13;
 }
 
 .product_grid {
