--- a/css/master.css
+++ b/css/master.css
@@ -77,7 +77,6 @@ header {
   transform: translateX(-50%);
   margin: 0 auto;
   overflow: hidden;
-  /* z-index: -1; */
   opacity: 0.8;
 }
 
@@ -181,8 +180,6 @@ main {
 }
 
 .signup_block {
-  /* display: flex;
-  justify-content: center; */
 }
 
 .signup_inputContainer{
@@ -207,7 +204,6 @@ main {
   background-color: var(--color-acc1);
   border-radius: 3px;
   border: none;
-  /* padding: 5px 5vw 5px 10px; */
   padding: 10px 0;
   line-height: 1.7em;
   font-family: 'Open Sans Condensed', sans-serif;
@@ -234,10 +230,6 @@ main {
 
 .product_highlight {
   display: grid;
-  /* grid-template-columns: 25vw 4vw 13vw 6vw 6vw 1fr 6vw; */
-  /* grid-template-columns: 1fr 4vw 4vw 4vw 13vw 4vw 4vw 1fr;  */
-  /* grid-template-columns: 1fr repeat(8, 4vw) 1fr; */
-
   grid-template-columns: 4vw 20vw 1fr repeat(8, 4vw) 1fr;
   grid-template-rows: repeat(3, 1fr);
   grid-template-areas:
@@ -248,6 +240,8 @@ main {
   border-bottom: 1px solid var(--color-acc2tt);
   padding-bottom: 20px;
   margin-bottom: 60px;
+  justify-content: center;
+  align-items: center;
 }
 
 .product_highlightIcon {
@@ -261,7 +255,7 @@ main {
 }
 
 .product_highlightIcon > img {
-  height: 75%;
+  height: 60%;
   object-fit: contain;
 }
 
@@ -324,18 +318,12 @@ main {
 }
 
 .highlightImage1r {
-  /* grid-area: image1; */
   grid-area: 1 / 9 / 1 / 13;
-  /* grid-area: 1 /  / 1 / ; */
 }
 .highlightImage2r {
-  /* grid-area: image2; */
-  /* grid-area: 2 / 5 / 2 / 8; */
   grid-area: 2 / 8 / 2 / 13;
 }
 .highlightImage3r {
-  /* grid-area: image3; */
-  /* grid-area: 3 / 4 / 3 / 8; */
   grid-area: 3 / 7 / 3 / 13;
 }
 
