--- a/css/master.css
+++ b/css/master.css
@@ -17,6 +17,7 @@ html {
 
 body {
   margin: 0 auto;
+  width: 100%;
   font-family: 'Raleway', sans-serif;
   background-color: var(--color-acc1);
   background-image: linear-gradient(
@@ -25,6 +26,7 @@ body {
     var(--color-acc1) 90%
     );
 }
+
 
 header {
   display: flex;
@@ -70,7 +72,7 @@ header {
   font-size: 2em;
 }
 
-.header_imgBlock {
+/* .header_imgBlock {
   height: 44vh;
   width: 95vw;
   left: 50%;
@@ -78,12 +80,12 @@ header {
   margin: 0 auto;
   overflow: hidden;
   opacity: 0.8;
-}
+} */
 
-.header_imgBlock > img {
+/* .header_imgBlock > img {
   object-fit: contain;
   width: 100%;
-}
+} */
 
 .header_border1 {
 }
@@ -123,6 +125,7 @@ nav > ul {
 .logo > img {
   object-fit: cover;
   width: 100%;
+  height: 50px;
 }
 
 nav > ul > li {
@@ -156,6 +159,38 @@ nav > ul > li > a {
 .push {
   margin-right: auto;
   border-radius: 3px;
+}
+
+@media only screen and (max-width: 600px) {
+  nav {
+    font-size: 0.6em;
+  }
+  .logo {
+    width: 12vw;
+  }
+  nav > ul {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  nav {
+    font-size: 0.65em;
+  }
+  nav > ul {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  nav > ul > li > a {
+    padding: 0 5px;
+  }
+}
+
+@media only screen and (min-width: 1800px) {
+  .logo {
+    width: 3.5vw;
+  }
 }
 
 main {
@@ -230,7 +265,7 @@ main {
 
 .product_highlight {
   display: grid;
-  grid-template-columns: 4vw 20vw 1fr repeat(8, 4vw) 1fr;
+  grid-template-columns: 4vw 20vw 1fr repeat(8, minmax(0, 4vw)) 1fr;
   grid-template-rows: repeat(3, 1fr);
   grid-template-areas:
   "icon1 content1"
@@ -240,6 +275,8 @@ main {
   border-bottom: 1px solid var(--color-acc2tt);
   padding-bottom: 20px;
   margin-bottom: 60px;
+  padding-left: 5vw;
+  padding-right: 5vw;
   justify-content: center;
   align-items: center;
 }
@@ -250,12 +287,13 @@ main {
   align-items: center;
   background-color: var(--color-main);
   border-radius: 3px;
-  margin: 35% 0 35% 0;
   height: 15vh;
+  width: auto;
 }
 
 .product_highlightIcon > img {
   height: 60%;
+  max-width: 150%;
   object-fit: contain;
 }
 
@@ -291,7 +329,8 @@ main {
 }
 
 .product_highlightImage {
-  height: 25vh;
+  max-height: 25vh;
+  min-height: 18vh;
   margin: 0;
   padding: 0;
 }
@@ -300,7 +339,8 @@ main {
   object-fit: cover;
   border: 1px solid var(--color-acc2);
   width: 100%;
-  height: 25vh;
+  max-height: 25vh;
+  min-height: 18vh;
   border-radius: 3px;
   opacity: 0.83;
   padding: 0;
@@ -327,12 +367,44 @@ main {
   grid-area: 3 / 7 / 3 / 13;
 }
 
+@media only screen and (max-width: 600px) {
+  .product_highlight {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .product_highlightContent > ul {
+    font-size: 0.60em;
+    list-style-position: inside;
+    padding: 0 0 0 2%;
+    margin: 0;
+    text-align: justify;
+  }
+  .product_highlightContent ul > li {
+    padding-bottom: 5%;
+  }
+  .product_highlightIcon {
+    max-height: 5vh;
+  }
+  .product_highlightIcon > img {
+    width: auto;
+    height: auto;
+  }
+  .product_highlightImage {
+    max-height: 10vh;
+    min-height: 10vh;
+  }
+  .product_highlightImage > img {
+    max-height: 10vh;
+    min-height: 10vh;
+  }
+}
+
 .product_grid {
   display: grid;
   grid-template-rows: auto;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 20px;
-  padding: 60px 20px 20px 20px;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  grid-gap: 1.2%;
+  padding: 60px 3% 20px 3%;
   margin-bottom: 60px;
   border-bottom: 1px solid var(--color-acc2tt);
 }
@@ -408,6 +480,26 @@ main {
   outline-color: var(--color-main);
 }
 
+@media only screen and (max-width: 600px) {
+  .product > ul {
+    font-size: 0.60em;
+    list-style-position: inside;
+    padding: 0 0 0 2%;
+    margin: 0;
+    text-align: justify;
+  }
+  .product ul > li {
+    padding-bottom: 5%;
+  }
+  .product_header > h2 {
+    font-size: 0.6em;
+  }
+  .product_button {
+    font-size: 0.6em;
+    padding: 0;
+  }
+}
+
 .testimony_block {
   display: flex;
   flex-direction: column;
@@ -416,30 +508,29 @@ main {
   padding-bottom: 20px;
 }
 
+.testimonyMainHeader {
+  padding-left: 5vw;
+  margin-bottom: 0;
+}
+
 .testimony_container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
   width: 95%;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 }
 
 .testimonyContent {
+  flex-grow: 1;
+  flex-basis: 17%;
+  max-width: 25%;
   font-size: 0.8em;
   text-align: left;
   padding: 0 5px;
-  margin: 0 10px;
+  margin: 3% 10px;
   background-color: var(--color-acc2tt);
-}
-
-@media all and (max-width: 600px) {
-  .testimonyContentInside {
-    font-size: 0.7em;
-  }
-}
-
-.testimonyMainHeader {
-  padding-left: 5vw;
 }
 
 .testimonyHeaderStyle {
